# omnitensor-core

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
config/: config.toml
docs/: api.md
scripts/: deploy.sh  test.sh
src/: main.rs
src/chain/: block.rs  transaction.rs
src/consensus/: stake_manager.rs  validator.rs
src/network/: p2p.rs  sync.rs
src/storage/: db.rs
src/utils/: crypto.rs  logger.rs
tests/: consensus_tests.rs  network_tests.rs
